# homewizard-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  RELEASING.md  SECURITY.md  flake.nix  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
homewizard_cli/: __init__.py  __main__.py  alerting.py  cacert.py  client.py  client_factory.py  client_v2.py  config.py  cost.py  discovery.py  errors.py  expr.py  jsonpath.py  main.py  obis.py  state.py  storage.py  util.py  ws_client.py
homewizard_cli/commands/: __init__.py  batteries.py  combined.py  config.py  cost.py  dashboard.py  data.py  discover.py  energy.py  export.py  gas.py  hass.py  history.py  identify.py  info.py  pair.py  ping.py  power.py  quality.py  reboot.py  serve.py  state.py  system.py  telegram.py  users.py  water.py
homewizard_cli/format/: __init__.py  csv.py  env.py  influx.py  json.py  minimal.py  mqtt.py  prometheus.py  raw.py  table.py  template.py  tsv.py
homewizard_cli/models/: __init__.py  data.py  measurement.py  system.py  v2.py
scripts/: fix_host_resolution.py
tests/: conftest.py  test_alerting.py  test_batteries.py  test_client.py  test_client_factory.py  test_client_integration.py  test_client_v2.py  test_combined.py  test_commands.py  test_completions.py  test_config.py  test_config_cmd.py  test_cost.py  test_dashboard.py  test_data_db.py  test_data_func.py  test_discover_cmd.py  test_discovery.py  test_energy.py  test_errors.py  test_export.py  test_export_db.py  test_export_integration.py  test_export_pure.py  test_expr.py  test_format.py  test_format_comprehensive.py  test_gas.py  test_hass.py  test_history.py  test_identify.py  test_info.py  test_jsonpath.py  test_main_errors.py  test_models.py  test_mqtt_client.py  test_obis.py  test_pair.py  test_ping.py  test_power.py  (+18 more)
tests/__snapshots__/: test_snapshot_formatters.ambr
tests/fixtures/: api.json  battery_state.json  data.json  device_v2.json  measurement_v2.json  system.json  system_v2.json  telegram_v2.json
